# for display continuity sake please use 2 spaces instead of tabs

2012-09-24 mmichaud <michael.michaud@free.fr>
  * Small fix in SegmentStringsWithData2Features used by the NoderPlugIn

2012-09-22 mmichaud <michael.michaud@free.fr>
  * Update DXF driver to 0.7.8 (fix a bug preventing reading of TEXT entities)
  * Update topology plugin to 0.6 (rewrite of project points on line which can
    now perform several projections/insertions/splits per node
  * Fix 3569045 in PostGIS Writer
  * FR 3491966 Improve performance of label rendering with very large polygons.

2012-09-05 ede
  * JUMPWorkbench:
   - exit jre after early exception, no more hanging jre's
   - cleanup indentation

2012-09-03 mmichaud <michael.michaud@free.fr>
  * Upgrade csv-driver to version 0.6.5 (create empty geometries if geometry
    column is missing.
    
2012-09-02 mmichaud <michael.michaud@free.fr>
  * Fix bug 3564137 : pass Layerables to the LayerPrinter2 instead of Layers, so
    that a view containing a single RasterImageLayer can export the view.
    Remove check for java 1.4+ in SaveImageAsPlugIn
  * Fix bug 3564039 : Rendering is set to true when the thread actually starts, 
    otherwise, it may create infinite loops (see bug id 3564039)
  * Fix bug 3526653 : SaveImageAsPlugIn did not scale the RasterImage when
    it was exported to a wider image (the new RendererFactory framework was not 
    used by RasterImageRenderer)
  * Fix a regression in AttributeTablePanel : user can again copy/paste to an
    external application

2012-08-29 mmichaud <michael.michaud@free.fr>
  * Fix bug 3560828 by changing the dashed red line to a solid red line while
    moving an objetc.
  * NoderPlugIn : improve robustness of the workaround for the case where
    interiorPoint falls on the geometry boundary (JTS bug) 
  
2012-08-28 mmichaud <michael.michaud@free.fr>
  * Fix bug 3562375 (cancel project closing did not work any more)
  
2012-08-25 mmichaud <michael.michaud@free.fr>