@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-09-24 ede
+  * probably fix bug 3560708: Only .shp opened from zipped shapefile
+    http://sourceforge.net/tracker/?func=detail&atid=679906&aid=3560708&group_id=118054
+
 2012-09-24 mmichaud <michael.michaud@free.fr>
   * Small fix in SegmentStringsWithData2Features used by the NoderPlugIn
 
